--- a/FrontEndFinalProject/src/index.css
+++ b/FrontEndFinalProject/src/index.css
@@ -3,6 +3,7 @@
 	font-family: 'Satisfy', cursive;
 	margin: 0px;
 	padding: 0px;
+	color: #4a6660 !important;
 }
 img {
 	width: 100%;
@@ -12,6 +13,42 @@ img {
 .imgLogo {
 	width: 40%;
 	height: auto;
+}
+.mainTitle > h1 {
+	margin: 30px 0px 70px;
+}
+
+.buttonContainer {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-content: center;
+}
+.button {
+	background-color: #c3e2c2;
+	color: #4a6660;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	font-size: 16px;
+	cursor: pointer;
+	transition: background-color 0.3s, transform 0.3s;
+	margin-bottom: 50px;
+}
+.button:hover {
+	background-color: #c3e2c2;
+	transform: scale(1.05);
+}
+.table {
+	width: 100%;
+	table-layout: fixed;
+}
+
+.table th,
+.table td {
+	text-align: center;
+	border: 1px solid #ddd;
+	margin: auto;
 }
 
 /*----------------------NavBar---------------*/
@@ -24,7 +61,7 @@ img {
 	height: 100px;
 	display: flex;
 	justify-content: space-between;
-	color: #4a6660 !important;
+
 	box-shadow: rgba(182, 148, 106, 0.767) 0px 03px 20px 0px;
 	align-items: center;
 }
