--- a/FrontEndFinalProject/src/index.css
+++ b/FrontEndFinalProject/src/index.css
@@ -5,14 +5,20 @@
 	padding: 0px;
 	color: #4a6660 !important;
 }
-img {
+.imgHome {
 	width: 100%;
 	height: auto;
 	object-fit: cover;
+	margin-top: 30px;
 }
 .imgLogo {
-	width: 40%;
+	width: 60%;
 	height: auto;
+}
+.imgTour {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
 }
 .mainTitle > h1 {
 	margin: 30px 0px 70px;
@@ -33,7 +39,7 @@ img {
 	font-size: 16px;
 	cursor: pointer;
 	transition: background-color 0.3s, transform 0.3s;
-	margin-bottom: 50px;
+	/* margin-bottom: 50px; */
 }
 .button:hover {
 	background-color: #c3e2c2;
@@ -49,8 +55,30 @@ img {
 	text-align: center;
 	border: 1px solid #ddd;
 	margin: auto;
+	font-size: 24px;
+}
+ul {
+	list-style-type: none;
+	padding: 0;
 }
 
+li {
+	padding: 10px 0;
+	font-size: 24px;
+}
+select {
+	padding: 5px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+.tourContainer {
+	display: flex;
+	justify-content: space-around;
+}
+.boldColumn {
+	font-weight: bold;
+	text-align: left !important;
+}
 /*----------------------NavBar---------------*/
 .topHeader {
 	background-color: #c3e2c2;
@@ -86,6 +114,7 @@ img {
 
 /*----------------------footer---------------*/
 .footerContainer {
+	margin-top: 50px;
 	background-color: #c3e2c2;
 	padding: 20px;
 	display: flex;
@@ -100,7 +129,8 @@ img {
 }
 /*----------------------about us---------------*/
 .aboutUsContainer {
-	font-size: 40px;
+	font-size: 28px;
+	margin-top: 20px;
 }
 .companyContainer {
 	display: flex;
@@ -108,14 +138,14 @@ img {
 	align-items: flex-start;
 }
 .companyContainer > img {
-	width: 40%;
+	width: 80%;
 	border-radius: 20%;
-	margin: 10% auto;
+	margin: 40px auto;
 	border: solid 5px #c3e2c2;
 }
 .companyContainer > p {
 	font-size: 24px;
-	line-height: 1.5;
+	line-height: 2;
 	margin: 30px auto 50px;
 	width: 90%;
 }
