--- a/FrontEndFinalProject/src/index.css
+++ b/FrontEndFinalProject/src/index.css
@@ -8,7 +8,6 @@
 .bodyBackground {
 	opacity: 0.5;
 }
-
 .imgHome {
 	width: 100%;
 	height: auto;
@@ -82,6 +81,7 @@
 	margin: auto;
 	font-size: 16px;
 	overflow: hidden;
+	white-space: nowrap;
 	word-wrap: break-word;
 }
 .hidden {
