--- a/FrontEndFinalProject/src/index.css
+++ b/FrontEndFinalProject/src/index.css
@@ -81,7 +81,7 @@
 	margin: auto;
 	font-size: 16px;
 	overflow: hidden;
-	white-space: nowrap;
+	/* white-space: nowrap; */
 	word-wrap: break-word;
 }
 .hidden {
