--- a/FrontEndFinalProject/src/index.css
+++ b/FrontEndFinalProject/src/index.css
@@ -49,7 +49,7 @@
 	padding: 10px 20px;
 	border: none;
 	border-radius: 5px;
-	font-size: 16px;
+	font-size: 24px;
 	cursor: pointer;
 	transition: background-color 0.3s, transform 0.3s;
 	/* margin-bottom: 50px; */
@@ -63,6 +63,19 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+}
+form,
+select,
+.date {
+	font-size: 24px;
+}
+.inputs {
+	font-size: 24px;
+	padding: 10px;
+	border: 2px solid green;
+}
+.m20 {
+	margin: 10px;
 }
 .table {
 	width: 100%;
