client booked tour delete welcome to client and admin to home page verify email in database in login

--- a/FrontEndFinalProject/src/index.css
+++ b/FrontEndFinalProject/src/index.css
@@ -69,7 +69,8 @@ select,
 .date {
 	font-size: 24px;
 }
-.inputs {
+.inputs,
+table {
 	font-size: 24px;
 	padding: 10px;
 	border: 2px solid green;
