--- a/FrontEndFinalProject/src/index.css
+++ b/FrontEndFinalProject/src/index.css
@@ -45,6 +45,10 @@
 .button.disabled {
 	display: none;
 }
+.wdt100 {
+	width: 100px;
+}
+
 .button {
 	background-color: #c3e2c2;
 	color: #4a6660;
@@ -54,7 +58,6 @@
 	font-size: 24px;
 	cursor: pointer;
 	transition: background-color 0.3s, transform 0.3s;
-	/* margin-bottom: 50px; */
 }
 .button:hover {
 	background-color: #c3e2c2;
@@ -69,7 +72,6 @@
 	font-size: 24px;
 	cursor: pointer;
 	transition: background-color 0.3s, transform 0.3s;
-	/* margin-bottom: 50px; */
 }
 .button_red:hover {
 	background-color: #e2c2c2;
@@ -84,7 +86,6 @@
 	font-size: 24px;
 	cursor: pointer;
 	transition: background-color 0.3s, transform 0.3s;
-	/* margin-bottom: 50px; */
 }
 .button_blue:hover {
 	background-color: #7982d2;
@@ -99,7 +100,6 @@
 	font-size: 24px;
 	cursor: pointer;
 	transition: background-color 0.3s, transform 0.3s;
-	/* margin-bottom: 50px; */
 }
 .button_yellow:hover {
 	background-color: #e8eb92;
@@ -153,7 +153,7 @@ table {
 	margin: auto;
 	font-size: 24px;
 	overflow: hidden;
-	/* white-space: nowrap; */
+
 	word-wrap: break-word;
 }
 .p20 {
